--- a/src/_posts/2020-06-05-GBA-FLASH.org
+++ b/src/_posts/2020-06-05-GBA-FLASH.org
@@ -43,10 +43,7 @@ Flash memory in GBA carts has the advantage of being non-volatile, meaning it do
 
 There were several chips that Nintendo used for Flash, all made by different manufacturers. GBATek lists them all.
 
-*Important:* You do NOT need to simulate all the different chips! When a developer shipped their code off to Nintendo to be put in a cartridge, they did *NOT* know what type of chip it would be manufactured with! Different production runs of the same game could even use different manufacturer's chips! As a consequence of this, all games should support /all Flash types./ This means that your emulator need only support one type per size. I chose Sanyo for 128K and Panasonic for 64K, as you can see below in the "Stubbing Flash" section.
-
-Note: Mother 3 requires an SST Flash chip.
-
+*Important:* You do NOT need to simulate all the different chips! When a developer shipped their code off to Nintendo to be put in a cartridge, they did *NOT* know what type of chip it would be manufactured with! Different production runs of the same game could even use different manufacturer's chips! As a consequence of this, all games should support /all Flash types./ I'm sure there are exceptions, but this means that your emulator need only support one type per size. I chose Sanyo for 128K and Panasonic for 64K, as you can see below in the "Stubbing Flash" section.
 
 As a downside, accessing it is significantly more complicated than for SRAM. The main loop the game will use is made up of sending the chip commands, and taking actions.
 
@@ -135,10 +132,10 @@ For 128K flash, Sanyo IDs:
 
 For 64K flash, Panasonic IDs:
 
-| 8-bit read address | Value | Meaning               |
-|--------------------+-------+-----------------------|
-|         0x0E000000 |  0x1B | Panasonic manufacturer ID |
-|         0x0E000001 |  0x32 | Panasonic device ID       |
+| 8-bit read address | Value | Meaning                   |
+|--------------------+-------+---------------------------|
+|         0x0E000000 |  0x32 | Panasonic manufacturer ID |
+|         0x0E000001 |  0x1B | Panasonic device ID       |
 
 And with that, you should have enough information to implement flash backups in your emulator.
 
